<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="add_card">Add card</string>
    <string name="add_card_to_favorites">Added card to favorites</string>
    <string name="add_languages">Add languages</string>
    <string name="add_stack">Add stack</string>
    <string name="add_tags">Add tags</string>
    <string name="all">All</string>
    <string name="app_name">lymbo</string>
    <string name="author">Author</string>
    <string name="back">Back</string>

    <string name="bundle_lymbo_uuid" translatable="false">bundleLymboUuid</string>
    <string name="bundle_card_uuid" translatable="false">bundleCardUuid</string>
    <string name="bundle_pos" translatable="false">bundlePos</string>

    <string name="bundle_title" translatable="false">bundleTitle</string>
    <string name="bundle_subtitle" translatable="false">bundleSubtitle</string>
    <string name="bundle_author" translatable="false">bundleAuthor</string>

    <string name="bundle_front_title" translatable="false">bundleFrontTitle</string>
    <string name="bundle_back_title" translatable="false">bundleBackTitle</string>
    <string name="bundle_texts_front" translatable="false">bundle_texts_front</string>
    <string name="bundle_texts_back" translatable="false">bundle_texts_back</string>
    <string name="bundle_tags_lymbo" translatable="false">bundleTagsLymbo</string>
    <string name="bundle_tags_card" translatable="false">bundleTagsCard</string>
    <string name="bundle_language_from" translatable="false">bundleLanguageFrom</string>
    <string name="bundle_language_to" translatable="false">bundleLanguageTo</string>

    <string name="broken_lymbo_file">Broken lymbo :(</string>
    <string name="cancel">Cancel</string>
    <string name="card">Card</string>
    <string name="card_restored">Card restored</string>
    <string name="cards">Cards</string>
    <string name="cards_resetted">Cards resetted</string>
    <string name="cards_stash">Cards Stash</string>
    <string name="chapters">Chapters</string>
    <string name="click_to_continue">Touch on screen to continue</string>
    <string name="copied_card">Copied card</string>
    <string name="copy_card">Copy card</string>
    <string name="correct">correct</string>
    <string name="could_not_find_any_cards">Could not find any cards</string>
    <string name="deep_copy">Deep copy</string>
    <string name="desc_image">Image component</string>
    <string name="describe_the_error">Describe the error</string>
    <string name="discard_card">Discarded card</string>
    <string name="display_favorites_only">Display favorites only</string>
    <string name="download_the_attachment">Download the attachment to use this lymbo</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit card</string>
    <string name="edited_card">Edited card</string>
    <string name="error_occurred">An error occurred :(</string>
    <string name="feedback">Feedback</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="fraction">/</string>
    <string name="front">Front</string>
    <string name="generated_missing_ids">Generated missing IDs</string>
    <string name="give_feedback_question">Feedback is very important for us to improve the app. Feel free to send us comments, hints and wishes.</string>
    <string name="hint">Hint</string>
    <string name="log">Log</string>
    <string name="logo">Logo</string>
    <string name="lymbo_error_log">Lymbo Error Log</string>
    <string name="lymbo_for_you">Lymbo for you</string>
    <string name="lymbos">Lymbos</string>
    <string name="lymbos_loaded">Lymbos loaded</string>
    <string name="lymbos_stash">Lymbos Stash</string>
    <string name="menu_log">Log</string>
    <string name="menu_about">About</string>
    <string name="menu_labels">Labels</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="menu_stash">Stash</string>
    <string name="message">Message</string>
    <string name="move_card">Move card</string>
    <string name="moved_card">Moved card</string>
    <string name="new_tag">new tag</string>
    <string name="new_text">new text</string>
    <string name="no_cards">no cards</string>
    <string name="no_cards_in_stash">No cards in stash</string>
    <string name="no_chapter">no chapter</string>
    <string name="no_tag">no tag</string>
    <string name="none">None</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="note">Note</string>
    <string name="note_edited">Note edited</string>
    <string name="okay">Okay</string>
    <string name="path">Path</string>
    <string name="put_card_to_end">Put card to end</string>
    <string name="remove_card_from_favorites">Removed card from favorites</string>
    <string name="report_error_question">Do you want to send the error log to the developer? This helps a lot fixing this issue.</string>
    <string name="search_lymbo_files">Searching for lymbo files</string>
    <string name="select_a_language">Select a language</string>
    <string name="select_answer">Select at least one answer</string>
    <string name="send">Send</string>
    <string name="send_mail">Send mail</string>
    <string name="share">Share</string>
    <string name="source_language">Source language</string>
    <string name="splash_found_1">Found</string>
    <string name="splash_found_2">Found</string>
    <string name="stack_restored">Stack restored</string>
    <string name="stack_stashed">Stack stashed</string>
    <string name="stack_types">Stack Types</string>
    <string name="stash">Stash</string>
    <string name="stash_card">Stash card</string>
    <string name="stash_stack">Stash stack</string>
    <string name="stashed_card">Stashed card</string>
    <string name="subtitle">Subtitle</string>
    <string name="tags">Tags</string>
    <string name="target_language">Target language</string>
    <string name="text">Text</string>
    <string name="tag_selected">Tag selected</string>
    <string name="title">Title</string>
    <string name="title_activity_edit_card">CardEditActivity</string>
    <string name="settings">Settings</string>
    <string name="undo">Undo</string>
    <string name="upload">Upload</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="wrong">wrong</string>
    <string name="select_all">all</string>
    <string name="thanks">Thanks!</string>
    <string name="deselect_all">deselect all</string>

    <!-- Languages -->

    <string name="lang_auto_detect">Auto detect</string>
    <string name="lang_arabic">Arabic</string>
    <string name="lang_bulgarian">Bulgarian</string>
    <string name="lang_catalan">Catalan</string>
    <string name="lang_chinese_simplified">Chinese simplified</string>
    <string name="lang_chinese_traditional">Chinese traditional</string>
    <string name="lang_czech">Czech</string>
    <string name="lang_danish">Danish</string>
    <string name="lang_dutch">Dutch</string>
    <string name="lang_english">English</string>
    <string name="lang_estonian">Estonian</string>
    <string name="lang_finnish">Finnish</string>
    <string name="lang_french">French</string>
    <string name="lang_german">German</string>
    <string name="lang_greek">Greek</string>
    <string name="lang_haitan_creole">Haitan Creole</string>
    <string name="lang_hebrew">Hebrew</string>
    <string name="lang_hindi">Hindi</string>
    <string name="lang_hmong_daw">Hmong daw</string>
    <string name="lang_hungarian">Hungarian</string>
    <string name="lang_indonesian">Indonesian</string>
    <string name="lang_italian">Italian</string>
    <string name="lang_japanese">Japanese</string>
    <string name="lang_korean">Korean</string>
    <string name="lang_latvian">Latvian</string>
    <string name="lang_lithuanian">Lithuanian</string>
    <string name="lang_malay">Malay</string>
    <string name="lang_norwegian">Norwegian</string>
    <string name="lang_persian">Persian</string>
    <string name="lang_polish">Polish</string>
    <string name="lang_portuguese">Portuguese</string>
    <string name="lang_romanian">Romanian</string>
    <string name="lang_russian">Russian</string>
    <string name="lang_slovak">Slovak</string>
    <string name="lang_slovenian">Slovenian</string>
    <string name="lang_spanish">Spanish</string>
    <string name="lang_swedish">Swedish</string>
    <string name="lang_thai">Thai</string>
    <string name="lang_turkish">Turkish</string>
    <string name="lang_ukrainian">Ukrainian</string>
    <string name="lang_urdu">Urdu</string>
    <string name="lang_vietnamese">Vietnamese</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_title_translator_api_secret">Translator API secret</string>

    <string name="translator_client_id" translatable="false">lymbo</string>

    <string name="translator_api_secret" translatable="false">translator_api_secret</string>
    <string name="translator_access_item_token_type" translatable="false">translator_access_item_token_type</string>
    <string name="translator_access_item_access_token" translatable="false">translator_access_item_access_token</string>
    <string name="translator_access_item_expires_in" translatable="false">translator_access_item_expires_in</string>
    <string name="translator_access_item_scope" translatable="false">translator_access_item_scope</string>
    <string name="translator_access_item_timestamp" translatable="false">translator_access_item_timestamp</string>

</resources>