<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_label"
        android:icon="@drawable/ic_action_labels"
        android:orderInCategory="50"
        android:title="@string/menu_labels"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_stash"
        android:orderInCategory="100"
        android:title="@string/menu_stash" />
    <item
        android:id="@+id/menu_log"
        android:orderInCategory="300"
        android:title="@string/menu_log" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="500"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="600"
        android:title="@string/menu_settings" />

</menu>