<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_templates"
        android:orderInCategory="100"
        android:title="@string/menu_templates"/>
    <item
        android:id="@+id/menu_stash"
        android:orderInCategory="200"
        android:title="@string/menu_stash"/>
    <item
        android:id="@+id/menu_shuffle"
        android:icon="@drawable/ic_shuffle_white_48dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="300"
        android:title="@string/menu_shuffle" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_white_48dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="400"
        android:title="@string/menu_filter" />
    <item
        android:id="@+id/menu_log"
        android:orderInCategory="500"
        android:title="@string/menu_log"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="600"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="700"
        android:title="@string/menu_settings" />
</menu>