<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_fragment_padding"
    android:theme="@style/Theme.AppCompat.Light.Dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/front">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/back" />

        <LinearLayout
            android:id="@+id/llAddTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dialog_fragment_padding"
            android:paddingRight="@dimen/dialog_fragment_padding"
            android:paddingTop="@dimen/dialog_fragment_padding">

            <ImageView
                android:id="@+id/ivLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_image"
                android:paddingEnd="@dimen/stack_bar_padding"
                android:src="@drawable/ic_action_labels_dark" />

            <TextView
                android:id="@+id/tvAddTags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/add_tags"
                android:textAlignment="textStart" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tblTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/ivAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_action_new" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>