<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_fragment_padding"
    android:theme="@style/Theme.AppCompat.Light.Dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFavorite"
                style="@style/CardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_star_border_black_48dp"
                android:ellipsize="end"
                android:text="@string/display_favorites_only" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTags"
            style="@style/CardText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/divider_caption_margin_bottom"
            android:layout_marginTop="@dimen/divider_caption_margin_top"
            android:layout_weight="0.50"
            android:ellipsize="end"
            android:text="@string/tags" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/stroke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dialog_fragment_padding">

            <TextView
                android:id="@+id/tvAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/all"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />

            <TextView
                android:id="@+id/tvNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/none"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tblTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>